# c64-cartridge

./: Commodore.dcm  Commodore.lib
Commodore.pretty/: CBM_Logo_16mm.kicad_mod  Expansion_Cartridge.kicad_mod
edge connector breakout/: edge connector breakout-cache.lib  edge connector breakout.kicad_pcb  edge connector breakout.kicad_pcb-bak  edge connector breakout.pro  edge connector breakout.sch  edge connector breakout.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
edge connector breakout/Commodore.pretty/: Expansion_Cartridge.kicad_mod
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config
firmware/src/: hello_world.S  main.rs  rom_image.S
usb/: sym-lib-table  usb.sch
usb, microcontroller only/: sym-lib-table  usb, microcontroller only.sch
