[package]
name = "c64"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-itm = "0.4"
stm32f4xx-hal = { version = "0.8", features = [ "stm32f407" ] }
