[package]
name = "c64"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-cortex-m = "0.4"
arraydeque = { version = "0.4", default-features = false }
bytes = { version = "1", default-features = false }
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
panic-itm = "0.4"
static_assertions = "0.1"
stm32f4xx-hal = { version = "0.8", features = [ "stm32f407", "usb_fs" ] }
usb-device = "0.2"
usbd-serial = "0.1"
